Implement Sky Weaver with creature color target filtering
Add Sky Weaver (10E #109), a 2/1 blue Metathran Wizard with activated
ability "{2}: Target white or black creature gains flying until end of
turn." Introduce CreatureColorTargetFilter to enforce color-based
targeting restrictions on activated abilities, applied to both Sky Weaver
and Spirit Weaver. Frontend filters invalid targets so they can't be
selected during ability activation.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>