@@ -5,13 +5,14 @@ import com.github.laxika.magicalvibes.model.CardSubtype;
 import com.github.laxika.magicalvibes.model.CardType;
 import com.github.laxika.magicalvibes.model.ActivatedAbility;
 import com.github.laxika.magicalvibes.model.GameData;
+import com.github.laxika.magicalvibes.model.Keyword;
 import com.github.laxika.magicalvibes.model.ManaColor;
 import com.github.laxika.magicalvibes.model.Permanent;
 import com.github.laxika.magicalvibes.model.Player;
 import com.github.laxika.magicalvibes.model.StackEntry;
 import com.github.laxika.magicalvibes.model.StackEntryType;
 import com.github.laxika.magicalvibes.model.TurnStep;
-import com.github.laxika.magicalvibes.model.effect.BoostTargetCreatureEffect;
+import com.github.laxika.magicalvibes.model.effect.GrantKeywordToTargetEffect;
 import com.github.laxika.magicalvibes.model.filter.CreatureColorTargetFilter;
 import com.github.laxika.magicalvibes.cards.d.DrudgeSkeletons;
 import com.github.laxika.magicalvibes.cards.f.FugitiveWizard;
@@ -24,7 +25,7 @@ import org.junit.jupiter.api.Test;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-class SpiritWeaverTest {
+class SkyWeaverTest {
 
     private GameTestHarness harness;
     private Player player1;
@@ -42,28 +43,29 @@ class SpiritWeaverTest {
     // ===== Card properties =====
 
     @Test
-    @DisplayName("Spirit Weaver has correct card properties")
+    @DisplayName("Sky Weaver has correct card properties")
     void hasCorrectProperties() {
-        SpiritWeaver card = new SpiritWeaver();
+        SkyWeaver card = new SkyWeaver();
 
-        assertThat(card.getName()).isEqualTo("Spirit Weaver");
+        assertThat(card.getName()).isEqualTo("Sky Weaver");
         assertThat(card.getType()).isEqualTo(CardType.CREATURE);
-        assertThat(card.getManaCost()).isEqualTo("{1}{W}");
-        assertThat(card.getColor()).isEqualTo(CardColor.WHITE);
+        assertThat(card.getManaCost()).isEqualTo("{1}{U}");
+        assertThat(card.getColor()).isEqualTo(CardColor.BLUE);
         assertThat(card.getPower()).isEqualTo(2);
         assertThat(card.getToughness()).isEqualTo(1);
-        assertThat(card.getSubtypes()).containsExactly(CardSubtype.HUMAN, CardSubtype.WIZARD);
-        assertThat(card.getActivatedAbilities().get(0).isNeedsTarget()).isTrue();
-        assertThat(card.getActivatedAbilities().get(0).getEffects()).hasSize(1);
-        assertThat(card.getActivatedAbilities().get(0).getEffects().getFirst())
-                .isInstanceOf(BoostTargetCreatureEffect.class);
-        BoostTargetCreatureEffect effect = (BoostTargetCreatureEffect) card.getActivatedAbilities().get(0).getEffects().getFirst();
-        assertThat(effect.powerBoost()).isEqualTo(0);
-        assertThat(effect.toughnessBoost()).isEqualTo(1);
-        assertThat(card.getActivatedAbilities().get(0).getManaCost()).isEqualTo("{2}");
-        assertThat(card.getActivatedAbilities().get(0).getTargetFilter()).isInstanceOf(CreatureColorTargetFilter.class);
-        CreatureColorTargetFilter filter = (CreatureColorTargetFilter) card.getActivatedAbilities().get(0).getTargetFilter();
-        assertThat(filter.colors()).containsExactlyInAnyOrder(CardColor.GREEN, CardColor.BLUE);
+        assertThat(card.getSubtypes()).containsExactly(CardSubtype.METATHRAN, CardSubtype.WIZARD);
+        assertThat(card.getActivatedAbilities()).hasSize(1);
+        ActivatedAbility ability = card.getActivatedAbilities().get(0);
+        assertThat(ability.isNeedsTarget()).isTrue();
+        assertThat(ability.isRequiresTap()).isFalse();
+        assertThat(ability.getManaCost()).isEqualTo("{2}");
+        assertThat(ability.getEffects()).hasSize(1);
+        assertThat(ability.getEffects().getFirst()).isInstanceOf(GrantKeywordToTargetEffect.class);
+        GrantKeywordToTargetEffect effect = (GrantKeywordToTargetEffect) ability.getEffects().getFirst();
+        assertThat(effect.keyword()).isEqualTo(Keyword.FLYING);
+        assertThat(ability.getTargetFilter()).isInstanceOf(CreatureColorTargetFilter.class);
+        CreatureColorTargetFilter filter = (CreatureColorTargetFilter) ability.getTargetFilter();
+        assertThat(filter.colors()).containsExactlyInAnyOrder(CardColor.WHITE, CardColor.BLACK);
     }
 
     // ===== Activation =====
@@ -72,8 +74,8 @@ class SpiritWeaverTest {
     @DisplayName("Activating ability puts it on the stack with target")
     void activatingPutsOnStackWithTarget() {
         addReadyWeaver(player1);
-        Permanent target = addReadyBears(player1);
-        harness.addMana(player1, ManaColor.WHITE, 2);
+        Permanent target = addReadyWhiteCreature(player1);
+        harness.addMana(player1, ManaColor.BLUE, 2);
 
         harness.activateAbility(player1, 0, null, target.getId());
 
@@ -81,16 +83,16 @@ class SpiritWeaverTest {
         assertThat(gd.stack).hasSize(1);
         StackEntry entry = gd.stack.getFirst();
         assertThat(entry.getEntryType()).isEqualTo(StackEntryType.ACTIVATED_ABILITY);
-        assertThat(entry.getCard().getName()).isEqualTo("Spirit Weaver");
+        assertThat(entry.getCard().getName()).isEqualTo("Sky Weaver");
         assertThat(entry.getTargetPermanentId()).isEqualTo(target.getId());
     }
 
     @Test
-    @DisplayName("Activating ability does not tap Spirit Weaver")
+    @DisplayName("Activating ability does not tap Sky Weaver")
     void activatingDoesNotTap() {
         Permanent weaver = addReadyWeaver(player1);
-        Permanent target = addReadyBears(player1);
-        harness.addMana(player1, ManaColor.WHITE, 2);
+        Permanent target = addReadyWhiteCreature(player1);
+        harness.addMana(player1, ManaColor.BLUE, 2);
 
         harness.activateAbility(player1, 0, null, target.getId());
 
@@ -101,8 +103,8 @@ class SpiritWeaverTest {
     @DisplayName("Mana is consumed when activating ability")
     void manaIsConsumedWhenActivating() {
         addReadyWeaver(player1);
-        Permanent target = addReadyBears(player1);
-        harness.addMana(player1, ManaColor.WHITE, 3);
+        Permanent target = addReadyWhiteCreature(player1);
+        harness.addMana(player1, ManaColor.BLUE, 3);
 
         harness.activateAbility(player1, 0, null, target.getId());
 
@@ -113,152 +115,126 @@ class SpiritWeaverTest {
     // ===== Resolution =====
 
     @Test
-    @DisplayName("Resolving ability gives target creature +0/+1")
-    void resolvingBoostsTargetToughness() {
+    @DisplayName("Resolving ability grants flying to white creature")
+    void resolvingGrantsFlyingToWhiteCreature() {
         addReadyWeaver(player1);
-        Permanent target = addReadyBears(player1);
-        harness.addMana(player1, ManaColor.WHITE, 2);
+        Permanent target = addReadyWhiteCreature(player1);
+        harness.addMana(player1, ManaColor.BLUE, 2);
 
         harness.activateAbility(player1, 0, null, target.getId());
         harness.passBothPriorities();
 
         GameData gd = harness.getGameData();
         assertThat(gd.stack).isEmpty();
-        assertThat(target.getEffectivePower()).isEqualTo(2);
-        assertThat(target.getEffectiveToughness()).isEqualTo(3);
-        assertThat(target.getToughnessModifier()).isEqualTo(1);
-        assertThat(target.getPowerModifier()).isEqualTo(0);
+        assertThat(target.hasKeyword(Keyword.FLYING)).isTrue();
+    }
+
+    @Test
+    @DisplayName("Resolving ability grants flying to black creature")
+    void resolvingGrantsFlyingToBlackCreature() {
+        addReadyWeaver(player1);
+        Permanent target = addReadyBlackCreature(player1);
+        harness.addMana(player1, ManaColor.BLUE, 2);
+
+        harness.activateAbility(player1, 0, null, target.getId());
+        harness.passBothPriorities();
+
+        assertThat(target.hasKeyword(Keyword.FLYING)).isTrue();
     }
 
     @Test
     @DisplayName("Can activate ability multiple times on same target")
     void canActivateMultipleTimes() {
         addReadyWeaver(player1);
-        Permanent target = addReadyBears(player1);
-        harness.addMana(player1, ManaColor.WHITE, 6);
+        Permanent target = addReadyWhiteCreature(player1);
+        harness.addMana(player1, ManaColor.BLUE, 4);
 
         harness.activateAbility(player1, 0, null, target.getId());
         harness.passBothPriorities();
         harness.activateAbility(player1, 0, null, target.getId());
         harness.passBothPriorities();
+
+        assertThat(target.hasKeyword(Keyword.FLYING)).isTrue();
+    }
+
+    @Test
+    @DisplayName("Can target opponent's white creature")
+    void canTargetOpponentWhiteCreature() {
+        addReadyWeaver(player1);
+        Permanent target = addReadyWhiteCreature(player2);
+        harness.addMana(player1, ManaColor.BLUE, 2);
+
         harness.activateAbility(player1, 0, null, target.getId());
         harness.passBothPriorities();
 
-        assertThat(target.getEffectivePower()).isEqualTo(2);
-        assertThat(target.getEffectiveToughness()).isEqualTo(5);
-        assertThat(target.getToughnessModifier()).isEqualTo(3);
+        assertThat(target.hasKeyword(Keyword.FLYING)).isTrue();
     }
 
     // ===== End of turn cleanup =====
 
     @Test
-    @DisplayName("Boost resets at end of turn")
-    void boostResetsAtEndOfTurn() {
+    @DisplayName("Flying is removed at end of turn")
+    void flyingRemovedAtEndOfTurn() {
         addReadyWeaver(player1);
-        Permanent target = addReadyBears(player1);
-        harness.addMana(player1, ManaColor.WHITE, 4);
+        Permanent target = addReadyWhiteCreature(player1);
+        harness.addMana(player1, ManaColor.BLUE, 2);
 
         harness.activateAbility(player1, 0, null, target.getId());
         harness.passBothPriorities();
-        harness.activateAbility(player1, 0, null, target.getId());
-        harness.passBothPriorities();
 
-        assertThat(target.getEffectiveToughness()).isEqualTo(4);
+        assertThat(target.hasKeyword(Keyword.FLYING)).isTrue();
 
         harness.forceStep(TurnStep.END_STEP);
         harness.clearPriorityPassed();
         harness.passBothPriorities();
 
-        assertThat(target.getToughnessModifier()).isEqualTo(0);
-        assertThat(target.getEffectiveToughness()).isEqualTo(2);
+        assertThat(target.hasKeyword(Keyword.FLYING)).isFalse();
     }
 
-    // ===== Validation =====
+    // ===== Color restriction validation =====
+
+    @Test
+    @DisplayName("Cannot target green creature")
+    void cannotTargetGreenCreature() {
+        addReadyWeaver(player1);
+        Permanent target = addReadyGreenCreature(player1);
+        harness.addMana(player1, ManaColor.BLUE, 2);
+
+        assertThatThrownBy(() -> harness.activateAbility(player1, 0, null, target.getId()))
+                .isInstanceOf(IllegalStateException.class)
+                .hasMessageContaining("Target must be a");
+    }
+
+    @Test
+    @DisplayName("Cannot target blue creature")
+    void cannotTargetBlueCreature() {
+        addReadyWeaver(player1);
+        Permanent target = addReadyBlueCreature(player1);
+        harness.addMana(player1, ManaColor.BLUE, 2);
+
+        assertThatThrownBy(() -> harness.activateAbility(player1, 0, null, target.getId()))
+                .isInstanceOf(IllegalStateException.class)
+                .hasMessageContaining("Target must be a");
+    }
+
+    // ===== Mana validation =====
 
     @Test
     @DisplayName("Cannot activate ability without enough mana")
     void cannotActivateWithoutEnoughMana() {
         addReadyWeaver(player1);
-        Permanent target = addReadyBears(player1);
-        harness.addMana(player1, ManaColor.WHITE, 1);
+        Permanent target = addReadyWhiteCreature(player1);
+        harness.addMana(player1, ManaColor.BLUE, 1);
 
         assertThatThrownBy(() -> harness.activateAbility(player1, 0, null, target.getId()))
                 .isInstanceOf(IllegalStateException.class)
                 .hasMessageContaining("Not enough mana");
     }
 
-    // ===== Color restriction validation =====
-
-    @Test
-    @DisplayName("Can target green creature")
-    void canTargetGreenCreature() {
-        addReadyWeaver(player1);
-        Permanent target = addReadyBears(player1);
-        harness.addMana(player1, ManaColor.WHITE, 2);
-
-        harness.activateAbility(player1, 0, null, target.getId());
-        harness.passBothPriorities();
-
-        assertThat(target.getEffectiveToughness()).isEqualTo(3);
-    }
-
-    @Test
-    @DisplayName("Can target blue creature")
-    void canTargetBlueCreature() {
-        addReadyWeaver(player1);
-        Permanent target = addReadyBlueCreature(player1);
-        harness.addMana(player1, ManaColor.WHITE, 2);
-
-        harness.activateAbility(player1, 0, null, target.getId());
-        harness.passBothPriorities();
-
-        assertThat(target.getEffectiveToughness()).isEqualTo(2);
-    }
-
-    @Test
-    @DisplayName("Cannot target white creature")
-    void cannotTargetWhiteCreature() {
-        addReadyWeaver(player1);
-        Permanent target = addReadyWhiteCreature(player1);
-        harness.addMana(player1, ManaColor.WHITE, 2);
-
-        assertThatThrownBy(() -> harness.activateAbility(player1, 0, null, target.getId()))
-                .isInstanceOf(IllegalStateException.class)
-                .hasMessageContaining("Target must be a");
-    }
-
-    @Test
-    @DisplayName("Cannot target black creature")
-    void cannotTargetBlackCreature() {
-        addReadyWeaver(player1);
-        Permanent target = addReadyBlackCreature(player1);
-        harness.addMana(player1, ManaColor.WHITE, 2);
-
-        assertThatThrownBy(() -> harness.activateAbility(player1, 0, null, target.getId()))
-                .isInstanceOf(IllegalStateException.class)
-                .hasMessageContaining("Target must be a");
-    }
-
     // ===== Helpers =====
 
     private Permanent addReadyWeaver(Player player) {
-        SpiritWeaver card = new SpiritWeaver();
-        Permanent perm = new Permanent(card);
-        perm.setSummoningSick(false);
-        harness.getGameData().playerBattlefields.get(player.getId()).add(perm);
-        return perm;
-    }
-
-    private Permanent addReadyBears(Player player) {
-        GrizzlyBears card = new GrizzlyBears();
-        Permanent perm = new Permanent(card);
-        perm.setSummoningSick(false);
-        harness.getGameData().playerBattlefields.get(player.getId()).add(perm);
-        return perm;
-    }
-
-    private Permanent addReadyBlueCreature(Player player) {
-        FugitiveWizard card = new FugitiveWizard();
+        SkyWeaver card = new SkyWeaver();
         Permanent perm = new Permanent(card);
         perm.setSummoningSick(false);
         harness.getGameData().playerBattlefields.get(player.getId()).add(perm);
@@ -275,6 +251,22 @@ class SpiritWeaverTest {
 
     private Permanent addReadyBlackCreature(Player player) {
         DrudgeSkeletons card = new DrudgeSkeletons();
+        Permanent perm = new Permanent(card);
+        perm.setSummoningSick(false);
+        harness.getGameData().playerBattlefields.get(player.getId()).add(perm);
+        return perm;
+    }
+
+    private Permanent addReadyGreenCreature(Player player) {
+        GrizzlyBears card = new GrizzlyBears();
+        Permanent perm = new Permanent(card);
+        perm.setSummoningSick(false);
+        harness.getGameData().playerBattlefields.get(player.getId()).add(perm);
+        return perm;
+    }
+
+    private Permanent addReadyBlueCreature(Player player) {
+        FugitiveWizard card = new FugitiveWizard();
         Permanent perm = new Permanent(card);
         perm.setSummoningSick(false);
         harness.getGameData().playerBattlefields.get(player.getId()).add(perm);
